WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54158
Throw exception when AudioContext's createBuffer() fails to properly decode audio file data
https://bugs.webkit.org/show_bug.cgi?id=54158
Summary
Throw exception when AudioContext's createBuffer() fails to properly decode a...
Chris Rogers
Reported
2011-02-09 18:30:08 PST
Throw exception when AudioContext's createBuffer() fails to properly decode audio file data
Attachments
Patch
(8.35 KB, patch)
2011-02-09 18:41 PST
,
Chris Rogers
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2011-02-09 18:41:27 PST
Created
attachment 81910
[details]
Patch
Chris Rogers
Comment 2
2011-02-09 18:43:29 PST
I created custom bindings here in order to give more detailed information when throwing exceptions about decoding audio file data.
Kenneth Russell
Comment 3
2011-02-10 15:11:57 PST
Comment on
attachment 81910
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=81910&action=review
Looks fine to me. One minor comment.
> Source/WebCore/bindings/js/JSAudioContextCustom.cpp:73 > + if (arrayBuffer) {
To make the JSC and V8 bindings identical you should ASSERT(arrayBuffer) here.
Chris Rogers
Comment 4
2011-02-11 12:54:24 PST
Committed
r78360
: <
http://trac.webkit.org/changeset/78360
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug